<?xml version="1.0"?>
<package format="3">
  <name>g1_bringup</name>
  <version>0.1.0</version>
  <description>Hardware bringup launch files for Unitree G1 Dex3 (Stage B)</description>
  <maintainer email="dev@g1slam.local">g1_slam_dev</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>g1_description</depend>
  <depend>g1_cmd_bridge</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
