<?xml version="1.0"?>
<package format="3">
  <name>g1_cmd_bridge</name>
  <version>0.1.0</version>
  <description>
    ROS2 node bridging /cmd_vel to Unitree G1 LocoClient (Stage B hardware).
    Subscribes to geometry_msgs/Twist and calls G1LocoClient.Move(vx, vy, vyaw).
  </description>
  <maintainer email="dev@g1slam.local">g1_slam_dev</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
