<?xml version="1.0"?>
<package format="3">
  <name>g1_navigation</name>
  <version>0.1.0</version>
  <description>Nav2 autonomous navigation configuration for Unitree G1</description>
  <maintainer email="dev@g1slam.local">g1_slam_dev</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>navigation2</depend>
  <depend>nav2_bringup</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
