<?xml version="1.0"?>
<package format="3">
  <name>g1_slam</name>
  <version>0.1.0</version>
  <description>SLAM launch and configuration for Unitree G1 (slam_toolbox + pointcloud_to_laserscan)</description>
  <maintainer email="dev@g1slam.local">g1_slam_dev</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>slam_toolbox</depend>
  <depend>pointcloud_to_laserscan</depend>
  <depend>tf2_ros</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
